# portoapi

./: .env  Cargo.toml  diesel.toml
docs/: db.dbml  db.sql
migrations/2024-05-04-121511_all_content/: down.sql
src/: lib.rs
src/internal/models/: mod.rs
src/internal/schema/: mod.rs
