[package]
name = "portofolioapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"]}
chrono = {version = "0.4.28", features = ["serde"]}
sqlx = {version = "0.7.1", features = ["mysql", "runtime-tokio", "chrono", "uuid", "macros"]}
actix-cors = "0.6.4"
uuid = { version = "1.4.1", features = ["serde",  "v4",  "fast-rng",   "macro-diagnostics"] }
argon2 = "0.5.2"
jsonwebtoken = "9.1.0"
futures = "0.3.28"
base64 = "0.21.4"
diesel = { version = "2.1.6", features = ["mysql"] }

[build-dependencies]
dotenv = "0.15.0"

